--- a/lecture5.Rmd
+++ b/lecture5.Rmd
@@ -720,7 +720,7 @@ par(mfrow = c(1, 1))
 
 class: middle
 
-```{r beta-envelopes, echo = FAlSE, fig.width = 12, fig.height = 6}
+```{r beta-envelopes, echo = FALSE, fig.width = 12, fig.height = 6}
 par(mfrow = c(1, 2))
 curve(x^3 * (1 - x) / beta(4, 2), col = "blue", lwd = 2, log = "y")
 curve(
@@ -908,7 +908,7 @@ Differences due to R implementation.
 --
 
 - Efficiency depends on number of rejections and also 
-  how good the implementation is.
+  quality of implementation.
 --
 
 - A good implementation should make use of new points to
